--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -17,7 +17,7 @@
   width: 80px;
   margin-bottom: 2vh;
   transform: scale(1);
-  transition: scale 1s ease-in-out;
+  transition: transform .5s ease-in-out;
   transition: filter 0s ease-in-out;
 }
 
